Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17532

Performance_schema reports wrong directory for the temporary files of ALTER TABLE…ALGORITHM=INPLACE

    XMLWordPrintable

Details

    Description

      The temporary files created by InnoDB during ALTER TABLE…ALGORITHM=INPLACE are wrongly being reported as being located inside @datadir, instead of being inside @tmpdir.

      There is a fix for this in mysql-5.6.42.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.