MDEV-17532 Performance_schema reports wrong directory for the temporary files of ALTER TABLE…ALGORITHM=INPLACE

row_merge_file_create_low(): Pass the directory of the temporary file
to the PSI_FILE_CALL.